1.2.90 (1.3.0 rc1):
-Add: Option to apply album gain to converted files
-Add: Copy embedded covers for Ogg (only reading), Mp3 and Flac files
-Change: By default log files won't be written to the hard drive anymore, it can be activated in the config dialog though

1.2.1:
-Add: French translation
-Fix: Make mplayer log less when decoding videos
-Fix: Remove old log files on start up

1.2.0:
-Add: Update translations
-Remove: French, Serbian, Russian and Brazilian Portuguese translations since they are less than 80% complete

1.1.90 (1.2.0 rc1):
-Add: Aften plugin
-Add: Speex plugin
-Add: Plugin info dialog
-Add: Make it possible to use experimental codecs with ffmpeg
-Add: Make it possible to use user defined arguments with ffmpeg
-Add: Re-add aac/m4a encoding to the ffmpeg plugin
-Change: Query ffmpeg for supported codecs

1.1.0:
-Add: Estonian translation (by Mihkel Tõnnov)
-Add: Serbian translation (by Slobodan Terzić)
-Add: Spanish (Argentinian) translation (by akana_sfe)
-Change: Only use wav as temp codec

1.0.90 (1.1.0 rc1):
-Add: Portuguese translation (by Sérgio Marques)
-Add: Brazilian Portuguese translation (by Tex Weissffudder)
-Add: Russian translation (by Alexey Ivanov)
-Add: Inform the user if there is a better backend available for a given format (e.g. prefer lame over ffmpeg)
-Add: Make it possible to choose the preferred extension for ogg vorbis files
-Add: Playing CD tracks before ripping them
-Add: Fluidsynth plugin
-Add: Possibility to write temporary files to /dev/shm
-Change: Prevent options dialogs from getting too wide
-Change: Automatically remove FAT incompatible characters if output directory is on a FAT volume
-Change: MusePack: Find mpenc, mpcdec and mpcgain backends, too
-Fix: CDDB requests
-Fix: Handle files with dollar signs and backticks (`) correctly
-Fix: Filnames wouldn't be FAT compatible if output mode was copy directory structure
-Fix: Display correct progress when applying Replay Gain to multiple ogg vorbis files