@@ -449,7 +449,11 @@ void Convert::writeTags( ConvertItem *item )
         item->fileListItem->tags->coversRead = true;
     }
 
-    config->tagEngine()->writeCovers( item->outputUrl, item->fileListItem->tags->covers );
+    bool success = config->tagEngine()->writeCovers( item->outputUrl, item->fileListItem->tags->covers );
+    if( config->data.coverArt.writeCovers == 0 || ( config->data.coverArt.writeCovers == 1 && !success ) )
+    {
+        config->tagEngine()->writeCoversToDirectory( item->outputUrl.directory(), item->fileListItem->tags->covers );
+    }
 }
 
 void Convert::put( ConvertItem *item )
